fixed image on mobile

--- a/client/src/assets/Main.css
+++ b/client/src/assets/Main.css
@@ -400,6 +400,13 @@ a.icon-link span.icon {
   .hero {
     display:none;
   }
+  .microslide {
+    display: none;
+  }
+  .slider_main {
+    display: none;
+  }
+
 }
 .footer-wrapper,
 .push {
